# data-engineering-on-gcp

./: fluke
01-introduction-to-data-engineering/: dogs.json  extract.py  load.sh
My-project/: pyproject.toml
proj-sales-prediction/: main.py  pipeline.conf  pyproject.toml
