[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Rujiphat416 <113567715+Rujiphat416@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
panda = "^0.3.1"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
